--- a/index.html
+++ b/index.html
@@ -7,12 +7,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <script src="https://cdn.jsdelivr.net/gh/donmccurdy/aframe-extras@v6.1.0/dist/aframe-extras.min.js"></script>
+    <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script>
     <script src="https://aframe.io/releases/0.9.2/aframe.min.js"></script>
     <script src="https://unpkg.com/aframe-particle-system-component@1.0.9/dist/aframe-particle-system-component.min.js"></script>
     <script src="displacement-shader.js"></script>
   </head>
   <body>
-    <a-scene>
+    <a-scene physics="gravity: -9.8">
 
       <a-entity id="snow" particle-system="preset: snow; particleCount: 5000; color: #FF1493;" rotation="-220 0 0" position="0 0 0"></a-entity>
       <a-entity id="snow" particle-system="preset: snow; particleCount: 5000; color: #4169E1;" rotation="-270 0 0" position="0 0 0"></a-entity>
@@ -34,7 +36,9 @@
       
 
       <!--WoodenBox-->
-      <a-box src="#boxTexture" position="-1 0.5 -3" rotation="0 0 0" color="lightgray"></a-box>
+      <a-box src="#boxTexture" position="-1 2.5 -3" rotation="0 0 0" color="lightgray"
+             dynamic-body>
+      </a-box>
       <!--End-->
 
       <!--MetalSphere-->
@@ -75,7 +79,9 @@
 
 
       <!--Main floor here-->
-      <a-plane src="#floorTexture" position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="white"></a-plane>
+      <a-plane src="#floorTexture" position="0 0 -4" rotation="-90 0 0" width="10" height="10" color="white"
+               static-body>
+      </a-plane>
       <!--Main floor here-->
 
 
