--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
       <!--End-->
       
       <!--WoodenBox2-->
-      <a-box src="#boxTexture" position="1 2.5 -3" color="lightgray"
+      <a-box color="lightgray" position="1 2.5 -3"             
              static-body>
         <a-animation attribute="rotation" to="0 360 0" repeat="indefinite" dur="3000">
         </a-animation>
