--- a/index.html
+++ b/index.html
@@ -47,6 +47,10 @@
       </a-box>
       <!--End-->
       
+<a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+        <a-sphere position="5 0 0" color="mediumseagreen"></a-sphere>
+</a-entity>
+      
       <!--WoodenBox2-->
       <a-box color="lightgray" position="1 2.5 -3"             
              static-body>
