--- a/index.html
+++ b/index.html
@@ -47,9 +47,11 @@
       </a-box>
       <!--End-->
       
-<a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+      <a-box position="-1 1.6 -5" animation="property: position; to: 1 8 -10; dur: 2000; easing: linear; loop: true" color="tomato"></a-box>
+
+      <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
         <a-sphere position="5 0 0" color="mediumseagreen"></a-sphere>
-</a-entity>
+      </a-entity>
       
       <!--WoodenBox2-->
       <a-box color="lightgray" position="1 2.5 -3"             
