--- a/index.html
+++ b/index.html
@@ -52,11 +52,9 @@
       <a-box position="-1 1.6 -5" animation="property: position; to: 1 8 -10; dur: 5000; easing: linear; loop: true" color="tomato"></a-box>
       
       <!--WoodenBox2-->
-    <a-entity rotation="0 0 0" animation="property: rotation; to: 0 360 0; loop: true; dur: 10000">
+    <a-entity animation="property: rotation; to: 0 360 0; loop: true; dur: 30000">
       <a-box color="lightgray" position="1 2.5 -3"             
              static-body>
-        <a-animation attribute="rotation" to="0 360 0" repeat="indefinite" dur="3000">
-        </a-animation>
       </a-box>
      </a-entity>
       <!--End-->
