--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       <!--End-->
       
       <!--WoodenBox2-->
-    <a-entity animation="property: rotation; to: 0 360 0; loop: true; dur: 5000">
+    <a-entity animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear">
       <a-box color="lightgray" position="1 0.75 -3"             
              static-body
              event-set__color="_event: collide; material.color: red">
@@ -96,7 +96,7 @@
 
 
       <!--Main floor here-->
-      <a-plane src="#floorTexture" position="0 0 -4" rotation="-90 0 0" width="4" height="4" color="white"
+      <a-plane src="#floorTexture" position="0 0 -4" rotation="-90 0 0" width="6" height="6" color="white"
                static-body>
       </a-plane>
       <!--Main floor here-->
