--- a/index.html
+++ b/index.html
@@ -24,6 +24,10 @@
     </audio>
     
     <a-scene physics="gravity: -9.8; restitution: 0.7">
+      <a-camera>
+        <a-cursor>
+        </a-cursor>
+      </a-camera>
 
       <a-entity id="snow" particle-system="preset: snow; particleCount: 5000; color: #FF1493;" rotation="-220 0 0" position="0 0 0"></a-entity>
       <a-entity id="snow" particle-system="preset: snow; particleCount: 5000; color: #4169E1;" rotation="-270 0 0" position="0 0 0"></a-entity>
