--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
                 position="0 2 -6"
                 radius="2"
                 color="gold"
-                repeat="6 6">
+                repeat="6 6"
+                draggable>
                 </a-sphere>
       <!--End-->
 
