--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
       <!--End-->
       
       <!--WoodenBox2-->
-    <a-entity animation="property: rotation; to: 0 360 0; loop: true; dur: 5000; easing: linear">
+    <a-entity animation="property: rotation; to: 0 360 0; loop: true; dur: 10000; easing: linear">
       <a-box color="lightgray" position="1 0.75 -3"             
              static-body
              event-set__color="_event: collide; material.color: red">
@@ -68,7 +68,7 @@
                 radius="2"
                 color="gold"
                 repeat="6 6"
-                draggable>
+                graggable>
                 </a-sphere>
       <!--End-->
 
