--- a/index.html
+++ b/index.html
@@ -68,7 +68,9 @@
                 radius="2"
                 color="gold"
                 repeat="6 6"
-                graggable>
+                graggable
+                gravity="0.2"
+                dynamic-body>
                 </a-sphere>
       <!--End-->
 
