--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 radius="2"
                 color="gold"
                 repeat="6 6"
-                graggable
+                grabbable
                 gravity="0.2"
                 dynamic-body>
                 </a-sphere>
@@ -103,7 +103,7 @@
 
 
       <!--Main floor here-->
-      <a-plane src="#floorTexture" position="0 0 -4" rotation="-90 0 0" width="6" height="6" color="white"
+      <a-plane src="#floorTexture" position="0 0 -4" rotation="-90 0 0" width="8" height="8" color="white"
                static-body>
       </a-plane>
       <!--Main floor here-->
