--- a/index.html
+++ b/index.html
@@ -70,9 +70,7 @@
                 color="gold"
                 repeat="6 6"
                 grabbable
-                gravity="0.2"
-                restitution="-0.1"
-                dynamic-body>
+                dynamic-body="restitution:0.1; mass:10;">
                 </a-sphere>
       </a-entity>
       <!--End-->
