--- a/index.html
+++ b/index.html
@@ -29,6 +29,8 @@
         </a-cursor>
       </a-camera>
 
+      <a-entity progressive-controls position="0 0 5"></a-entity>
+      
       <a-entity id="snow" particle-system="preset: snow; particleCount: 5000; color: #FF1493;" rotation="-220 0 0" position="0 0 0"></a-entity>
       <a-entity id="snow" particle-system="preset: snow; particleCount: 5000; color: #4169E1;" rotation="-270 0 0" position="0 0 0"></a-entity>
 
