--- a/index.html
+++ b/index.html
@@ -61,14 +61,13 @@
       <!--End-->
 
       <!--MetalSphere-->
-      <a-entity grabbable>
+      <a-entity grabbable dynamic-body="restitution:0.1; mass:-10;">
       <a-sphere src="#sphereTexture"
                 position="0 2.5 -6"
                 radius="2"
                 color="gold"
                 repeat="6 6"
-                grabbable
-                dynamic-body="restitution:0.1; mass:-10;">
+                grabbable>
                 </a-sphere>
       </a-entity>
       <!--End-->
