--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
     <script src="https://unpkg.com/aframe-particle-system-component@1.0.9/dist/aframe-particle-system-component.min.js"></script>
     <script src="//cdn.rawgit.com/donmccurdy/aframe-physics-system/v4.0.1/dist/aframe-physics-system.min.js"></script>
     <script src="https://unpkg.com/aframe-event-set-component@4.2.1/dist/aframe-event-set-component.min.js"></script> 
-    <script src="https://unpkg.com/aframe-animation-component@^4.1.1/dist/aframe-animation-timeline-component.min.js"></script>
     <script src="https://unpkg.com/aframe-toggle-controls-component/dist/aframe-toggle-controls-component.min.js"></script>
     <script src="displacement-shader.js"></script>
   </head>
   <body>
-    <audio src="sea.mp3" autoplay loop>
+    <!-- <audio src="sea.mp3" autoplay loop>
     <p>If you are reading this, it is because your browser does not support the audio element.
       </p>
     <embed src="sea.mp3" width="180" height="90" hidden="true" />
-    </audio>
+    </audio> -->
     
     <a-scene
              physics="gravity: -9.8; restitution: 0.7"
