--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
     <script src="https://unpkg.com/aframe-event-set-component@4.2.1/dist/aframe-event-set-component.min.js"></script> 
     <script src="https://unpkg.com/aframe-toggle-controls-component/dist/aframe-toggle-controls-component.min.js"></script>
     <script src="displacement-shader.js"></script>
+    <style>
+    div.a-loader-title {display: none;}
+    </style>
   </head>
   <body>
     <!-- <audio src="sea.mp3" autoplay loop>
