--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <style>
-    div.a-loader-title {display: none;}
+    body.div.a-loader-title {display: none;}
     </style>
     <title>Welcome to Dayset Beach!</title>
     <meta name="description" content="A cool test made here">
