--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
   <head>
     <style>
     body.div.a-loader-title {display: none;}
+    $0 {display: none;}
     </style>
     <title>Welcome to Dayset Beach!</title>
     <meta name="description" content="A cool test made here">
