--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <html>
   <head>
     <style>
-    body.div.a-loader-title {display: none;}
-    $0 {display: none;}
+    $0.style.display= 'none'
     </style>
     <title>Welcome to Dayset Beach!</title>
     <meta name="description" content="A cool test made here">
